--- a/static_files/presentations/visualaids.html
+++ b/static_files/presentations/visualaids.html
@@ -119,7 +119,7 @@
     <section>
         <h2>1. 理論背景：變數變換定理</h2>
         <p>
-            積分變數變換 (Substitution Rule) 是微分連鎖律 (Chain Rule) 的逆運算。若函數 \(u = g(x)\) 是區間 \([a, b]\) 上可微的單調函數，且 \(f\) 在其值域上連續，則：
+            積分變數變換 (Substitution Rule) 是微分連鎖律 (Chain Rule) 的逆運算。若函數 \(u = g(x)\) 是區間 \([a, b]\) 上可微的函數，且 \(f\) 在其值域上連續，則：
         </p>
         <div class="math-display">
             $$ \int_a^b f(g(x)) \cdot g'(x) \, dx = \int_{g(a)}^{g(b)} f(u) \, du $$
@@ -350,4 +350,5 @@
 </script>
 
 </body>
+
 </html>
